# skills

./: .gitignore  README.md  pyproject.toml
.github/workflows/: community-activity.yml
amazon-asin-lookup-api-skill/: README.md  SKILL.md
amazon-asin-lookup-api-skill/scripts/: amazon_asin_lookup_api.py
amazon-competitor-analyzer/: amazon_competitor_analyzer.py
amazon-product-api-skill/: SKILL.md
amazon-product-search-api-skill/: SKILL.md
amazon-reviews-api-skill/: SKILL.md
browser-act/: SKILL.md
browser-act-skill-forge/: SKILL.md
browser-act-skill-forge/references/: exploration_extraction.md  output_template.md
browser-act/docs/: SKILL-zh.md
browser-act/references/: commands.md  policies.md  proxy.md
google-maps-api-skill/: SKILL.md
google-maps-reviews-api-skill/: SKILL.md
google-maps-search-api/: README.md
google-maps-search-api-skill/: SKILL.md
google-news-api/: SKILL.md
google-news-api-skill/: SKILL.md
solutions/: README.md
solutions/ecommerce/1688-product-detail/: SKILL.md
solutions/ecommerce/amazon-bestseller-listing/: SKILL.md
solutions/ecommerce/ebay-search-listing/: SKILL.md
solutions/ecommerce/etsy-keyword-search/: SKILL.md
solutions/ecommerce/walmart-keyword-search/: SKILL.md
solutions/social-listening/facebook-groups-scrape-posts/: SKILL.md
solutions/social-listening/x-tweet-by-conversation/: SKILL.md
web-research-assistant/: SKILL.md
youtube-api-skill/: SKILL.md
youtube-api-skill/scripts/: youtube_api.py
zhihu-search-api-skill/: SKILL.md
【ZH】comprehensive-seo-analyzer/: README.md  SKILL.md
(+12 files in other folders)
